[gd_scene load_steps=7 format=2]

[ext_resource path="res://bullets/cannon_ball/CannonBall.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enemies/triangle.png" type="Texture" id=2]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://guns/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/triangle/Triangle.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 42.6667

[node name="Triangle" groups=[
"hexagon",
] instance=ExtResource( 3 )]
modulate = Color( 0.972549, 0.407843, 0.243137, 1 )
collision_layer = 4
mass = 500.0
angular_velocity = 0.5
angular_damp = 0.0
script = ExtResource( 5 )
speed = 50.0
wave_points = 200

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, 8 )
rotation = 0.0
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." index="1"]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="Stats" parent="." index="2"]
max_health = 150

[node name="Gun1" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 90.5554, -52.2824 )
rotation = 1.0472
scale = Vector2( 1.78235, 1.78235 )
bullet_velocity = 500
BulletType = ExtResource( 1 )

[node name="Cooldown" parent="Gun1" index="0"]
wait_time = 0.5

[node name="Gun2" parent="." index="5" instance=ExtResource( 4 )]
position = Vector2( 0, 104.564 )
rotation = -3.14159
scale = Vector2( 1.78235, 1.78235 )
bullet_velocity = 500
BulletType = ExtResource( 1 )

[node name="Gun3" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( -90.5554, -52.2824 )
rotation = -1.04719
scale = Vector2( 1.78235, 1.78235 )
bullet_velocity = 500
BulletType = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="." index="7"]
scale = Vector2( 1.18823, 1.18823 )

[editable path="Gun1"]
